<resources>
    <string name="app_name">Card Emulation Example</string>

    <!-- Header strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_name">NFC Service</string>

    <!-- Hint strings -->
    <string name="card_title">Card Title</string>
    <string name="title_activity_card">Card Details</string>

    <!-- User Details Activity strings -->
    <string name="enter_first_name">Enter cardholder name:</string>
    <string name="enter_card_number">Enter card number:</string>
    <string name="error_field_empty_host">Field cannot be empty</string>
    <string name="save_details_success">Your details were successfully saved</string>
    <string name="check_name">Check your details carefully!</string>
    <string name="wifi_unable_to_validate">Please check carefully now.</string>
    <string name="forget_details">FORGET DETAILS</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="DELETE">DELETE</string>
    <string name="are_you_sure_you_want_to_forget_details">Are you sure you want to forget these details?</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_card_name_details">Enter Card Details</string>
    <string name="check_this_box">Check this box if you wish to include a security code</string>
    <string name="enter_security_code">Enter Security Code:</string>

    <!-- Home activity strings -->
    <string name="card_details">Card Details</string>
    <string name="enter_card_details">Enter your card details</string>
    <string name="select_timezone_and_card_details">Select your card details and time zone. These settings
                                            will be sent via NFC.</string>
    <string name="timezone">Time Zone</string>
    <string name="select_your_timezone">Select your time zone</string>
    <string name="transfer_settings">TRANSFER SETTINGS</string>
    <string name="check_receiver">Check the receiving device for transfer status</string>
    <string name="broadcasting">BROADCASTING…</string>
    <string name="displayed_timezone">%1$s %2$s</string>

    <!-- Timezone Strings -->
    <string name="select_time_zone">Select Time Zone</string>
    <string name="search_for_your_nearest_city">Search for your nearest city…</string>
    <string name="select_your_nearest_city">Select your nearest city:</string>

    <!-- Content description strings -->
    <string name="arrow">Arrow</string>
</resources>
