<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.Default">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:showDividers="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/home_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/select_timezone_and_card_details"
            android:textColor="@color/brown_grey_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_details_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_summary">

            <TextView
                android:id="@+id/card_details_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/card_details"
                android:background="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_details_arrow"
                style="TextAppearance.TabHeaders"/>

            <TextView
                android:id="@+id/card_details_body_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/enter_card_details"
                android:background="@android:color/white"
                android:textColor="@color/colorSettingSubtitles"
                app:layout_constraintTop_toBottomOf="@id/card_details_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/card_details_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/card_details_arrow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="center"
                android:src="@drawable/chevron"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/timezone_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tab_margin"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_details_tab">

            <TextView
                android:id="@+id/timezone_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/timezone"
                android:background="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/timezone_arrow"
                style="TextAppearance.TabHeaders" />

            <TextView
                android:id="@+id/timezone_body_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/select_your_timezone"
                android:background="@android:color/white"
                android:textColor="@color/colorSettingSubtitles"
                app:layout_constraintTop_toBottomOf="@id/timezone_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/timezone_arrow"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/timezone_arrow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="center"
                android:src="@drawable/chevron"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/timezone_tab"
                app:layout_constraintBottom_toBottomOf="@id/timezone_tab"/>

        </android.support.constraint.ConstraintLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/aviIndicator"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            app:indicatorColor="@color/bright_orange"
            app:indicatorName="BallScaleMultipleIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nfc_text"
            app:layout_constraintTop_toBottomOf="@id/timezone_tab"
            style="@style/AVLoadingIndicatorView"/>

        <TextView
            android:id="@+id/nfc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_receiver"
            android:textColor="@color/colorOrientationText"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/transfer_button"/>

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/transfer_settings"
            android:theme="@style/Widget.Button"
            android:backgroundTint="@color/brown_grey_two"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>
