<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/card_first_name_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/enter_first_name"
            android:theme="@style/TextAppearance.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/card_first_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            android:theme="@style/TextAppearance.Bold"
            android:background="@android:color/transparent"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_first_name_hint"/>

        <View
            android:id="@+id/card_first_name_underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/brown_grey_two"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            app:layout_constraintTop_toBottomOf="@id/card_first_name_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </View>

        <TextView
            android:id="@+id/card_card_number_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_large"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/enter_card_number"
            android:theme="@style/TextAppearance.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_first_name_underline"/>

        <EditText
            android:id="@+id/card_card_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@android:color/transparent"
            android:theme="@style/TextAppearance.Bold"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_card_number_hint"
            app:layout_constraintEnd_toStartOf="@id/visibilityButton"/>

        <ImageButton
            android:id="@+id/visibilityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_visibility_off"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@id/card_card_number_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_card_number_input"/>

        <View
            android:id="@+id/card_card_number_underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/brown_grey_two"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            app:layout_constraintTop_toBottomOf="@id/card_card_number_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </View>

        <TextView
            android:id="@+id/card_security_code_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/enter_security_code"
            android:theme="@style/TextAppearance.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_card_number_underline"/>

        <EditText
            android:id="@+id/card_security_code_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            android:theme="@style/TextAppearance.Bold"
            android:background="@android:color/transparent"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_security_code_hint"/>

        <View
            android:id="@+id/card_security_code_underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/brown_grey_two"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_small"
            app:layout_constraintTop_toBottomOf="@id/card_security_code_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </View>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/warning_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_large"
            android:background="@android:color/white"
            android:padding="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/card_card_number_underline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name_warning_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/check_name"
                android:textColor="@color/greyish_brown"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_report_problem"
                android:drawablePadding="@dimen/card_spacing_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_warning_body_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing_small"
                android:layout_marginTop="14dp"
                android:text="@string/wifi_unable_to_validate"
                android:textAppearance="@style/TextAppearance.Light"
                app:layout_constraintTop_toBottomOf="@+id/name_warning_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <CheckBox
            android:id="@+id/hasSecurityCodeCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_spacing_large"
            android:text="@string/check_this_box"
            android:textColor="@color/brown_grey_two"
            android:textSize="@dimen/text_default_size"
            app:layout_constraintTop_toBottomOf="@id/warning_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/forget_details_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/forget_details"
            android:theme="@style/TextAppearance.Clickable"
            app:layout_constraintTop_toTopOf="@id/save_details_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/save_details_btn"
            app:layout_constraintEnd_toStartOf="@id/save_details_btn"/>

        <Button
            android:id="@+id/save_details_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_details"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintStart_toStartOf="@string/save_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>
